# Sistema-de-gestao-de-tarefas-colaborativo

./: README.md  docker-compose.prod.yml
backend/: Dockerfile.prod  main.py  pyproject.toml
backend/configs/: security.py
backend/models/: Task.py  User.py  __init__.py
backend/routers/: auth_router.py  task_router.py
backend/schemas/: __init__.py  auth_schemas.py  task_schemas.py
backend/services/: auth_services.py  task_services.py
frontend/: .gitignore  Dockerfile.prod  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: axios.ts
frontend/src/components/CompleteTaskForm/: CompleteTaskForm.module.css  index.tsx
frontend/src/components/CreateTaskForm/: index.tsx
frontend/src/components/ListSystem/: ListSystem.module.css  index.tsx
frontend/src/components/LoginSystem/: LoginSystem.module.css  index.tsx
frontend/src/components/TaskDetailsModal/: TaskDetailsModal.module.css  index.tsx
frontend/src/components/TaskItem/: TaskItem.module.css  index.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/types/: TaskTypes.ts
frontend/src/utils/: utils.ts
